# mysql-udf-libxml2

./: Makefile.am  configure.in  mysql_udf_libxml2.c
